GNOME Bugzilla – Bug 737757
decodebin: memory leak
Last modified: 2014-10-06 06:54:27 UTC
Created attachment 287549 [details] Sample file With sample pipeline decodebin leaks one instance of GstProxyPad and GstDecodePad pipeline assumes working h.264 decoder and parser $ export GST_TRACE=mem-live $ /opt/avs-debug/bin/gst-launch-1.0 filesrc location="x.ts" ! decodebin ! fakesink output: ... GstProxyPad : (1) 0x10087a930 GstDecodePad : (1) 0x10088c190 ... I did try to debug it first but I got lost in decodebin code
Created attachment 287619 [details] [review] decodebin: unref decode pad after usage unref dpad before jumping to setup_caps_delay to avoid leaking it
Seems to work for me. Thanks!
commit 796fd165503b7e1a3724183542485a22ad0a7db4 Author: Aurélien Zanelli <aurelien.zanelli@darkosphere.fr> Date: Thu Oct 2 21:20:48 2014 +0200 decodebin: unref decode pad after usage https://bugzilla.gnome.org/show_bug.cgi?id=737757